--- a/package.json
+++ b/package.json
@@ -1,16 +1,41 @@
 {
   "name": "leroy-front-test",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
-  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "author": "Ramon Castan",
+  "license": "MIT",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "serve": "live-server public/",
+    "build": "webpack",
+    "dev-server": "webpack-dev-server"
+  },
+  "dependencies": {
+    "babel-cli": "6.24.1",
+    "babel-core": "6.25.0",
+    "babel-loader": "7.1.1",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "1.5.2",
+    "babel-preset-react": "6.24.1",
+    "css-loader": "0.28.4",
+    "jquery": "^3.3.1",
+    "live-server": "^1.2.0",
+    "materialize-css": "^0.100.2",
+    "moment": "^2.20.1",
+    "node-sass": "4.5.3",
+    "normalize-css": "^2.3.1",
+    "normalize.css": "7.0.0",
+    "react": "^15.6.2",
+    "react-dom": "15.6.1",
+    "react-materialize": "^1.1.2",
+    "react-modal": "^2.2.2",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "sass-loader": "6.0.6",
+    "style-loader": "0.18.2",
+    "validator": "8.0.0",
+    "webpack": "3.1.0",
+    "webpack-dev-server": "^2.5.1"
   }
 }
